tests/import_invalid_path_char.stderr
tests/import_invalid_path_char.sl:2:1: error: SL2020: invalid import path (invalid character)
