tests/import_invalid_path_char.sl
// Verifies import invalid path char.
import "a:"

fn main() {}
